Start main functionality implementation (committing so I can move to my laptop)

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -2,3 +2,5 @@
 min-ocean-distance=3
 # maximum percent of the blocks in the world that may be ocean
 max-ocean-content=0.15
+# radius from spawn point to scan in chunks
+scan-radius=20
