Finish up initial implementation

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -4,3 +4,5 @@ min-ocean-distance=3
 max-ocean-content=0.15
 # radius from spawn point to scan in chunks
 scan-radius=20
+# number of desired seeds
+desired-seeds=10
